made disruption work better

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     <h1>Correlation Graph Visualization</h1>
     <canvas id="canvas" width="1000" height="600"></canvas>
     <div id="controls">
-        <button id="disruptBtn">Disrupt Graph</button>
-        <button id="resetBtn">Reset Animation</button>
+        <button id="disruptBtn">Disrupt</button>
+        <button id="resetBtn">Randomize</button>
     </div>
     <div id="info">
         <p>Positive correlations attract (warm colors), negative correlations repel (cool colors)</p>
